--- a/package.json
+++ b/package.json
@@ -3,21 +3,37 @@
   "version": "0.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon server/server.js",
+    "postinstall": "bower install"
+    },
   "author": "Sean Reimer",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.4.3",
-    "express": "^4.4.5",
-    "http-server": "^0.8.5",
-    "jwt-simple": "^0.2.0",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "^1.14.2",
+    "bower": "^1.7.2",
+    "cookie-parser": "^1.4.0",
+    "express": "^4.13.3",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.12.1",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.1",
+    "grunt-shell": "^1.1.2",
+    "http": "0.0.0",
+    "kerberos": "0.0.17",
     "mongoose": "^4.3.4",
-    "morgan": "^1.1.1",
-    "passport": "^0.2.0",
-    "passport-local": "^1.0.0",
-    "q": "^1.0.1",
-    "request": "^2.36.0"
+    "morgan": "^1.6.1",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "scraperjs": "^1.2.0"
   }
 }
